--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,16 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1"
+		"phpspec/phpspec": "~2.1",
+		"fzaninotto/faker": "1.3.*@dev"
 	},
 	"autoload": {
 		"classmap": [
 			"database"
 		],
 		"psr-4": {
-			"App\\": "app/"
+			"App\\": "app/",
+			"Dave\\": "app/Dave/"
 		}
 	},
 	"autoload-dev": {
