--- a/public/bower.json
+++ b/public/bower.json
@@ -14,7 +14,8 @@
     "morrisjs": "~0.5.1",
     "datatables-responsive": "~1.0.3",
     "bootstrap-social": "~4.8.0",
-    "flot.tooltip": "~0.8.4"
+    "flot.tooltip": "~0.8.4",
+    "bootstrap-datepicker": "~1.4.0"
   },
   "ignore": [
     "**/.*",
