--- a/resources/bower.json
+++ b/resources/bower.json
@@ -16,7 +16,9 @@
     "bootstrap-social": "~4.8.0",
     "flot.tooltip": "~0.8.4",
     "bootstrap-datepicker": "~1.4.0",
-    "select2": "~3.5.2"
+    "select2": "~3.5.2",
+    "select2-bootstrap": "~1.3.0",
+    "markdown": "~0.5.0"
   },
   "ignore": [
     "**/.*",
